# agp

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  TRADEMARK.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_change.md
.github/workflows/: validate-schema.yml
examples/: a2a-call.json  agent-approved.json  agent-deactivated.json  agent-registered.json  context-archived.json  context-created.json  context-version-approved.json  governance-proof.json  inference-completed.json  inject-denied.json  inject-success-healthcare.json  inject-success-otel.json  inject-success.json  memory-read.json  memory-written.json  merkle-governance-proof.json  model-loaded.json  multi-policy-inject-otel.json  multi-prompt-tool-otel.json  policy-archived.json  policy-created.json  policy-version-approved.json  policy-violation.json  prompt-denied.json  prompt-used.json  prompt-version-approved.json  prompt-version-created.json  tool-invoked.json
integrations/openlineage/: README.md  semantic-conventions.md
schema/: agp-event.schema.json  aigp-event.schema.json
sdks/python/: README.md  pyproject.toml
sdks/python/aigp_otel/: __init__.py  attributes.py  baggage.py  events.py  instrumentor.py  openlineage.py  tracestate.py
sdks/python/examples/: end_to_end.py
sdks/python/tests/: test_events.py  test_merkle.py  test_new_events.py  test_openlineage.py  test_tracestate.py  test_v080_features.py
spec/: agp-spec.md  aigp-spec.md  roadmap-v0.8.0.md
(+5 files in other folders)
